--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="hehe.obebos.myTickTackToeApp">
+    package="da.maximov.myTickTackToeApp">
 
     <application
         android:allowBackup="true"
@@ -14,13 +14,13 @@
         android:theme="@style/Theme.MyTickTackToeApp"
         tools:targetApi="31">
         <activity
-            android:name=".GameActivity"
+            android:name="da.maximov.myTickTackToeApp.GameActivity"
             android:exported="false" />
         <activity
-            android:name=".SettingsActivity"
+            android:name="da.maximov.myTickTackToeApp.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="da.maximov.myTickTackToeApp.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
